2007-11-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclGet.c (Tcl_Get, Tcl_GetInt): revert use of TclGet*
	macros due to compiler warning.  These cases won't save time either.

	* generic/tclUtil.c (TclReToGlob): add more comments, set interp
	result if specified on error.

2007-11-12  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclBasic.c:     New macro TclResetResult, new iPtr flag 
	* generic/tclExecute.c:   bit INTERP_RESULT_UNCLEAN: shortcut for
	* generic/tclInt.h:       Tcl_ResetResult for the "normal" case:
	* generic/tclProc.c:      TCL_OK, no return options, no errorCode
	* generic/tclResult.c:    nor errorInfo, return at normal level.
	* generic/tclStubLib.c:   [Patch 1830184]
	* generic/tclUtil.c:

	THIS PATCH WAS REVERTED: initial (mis)measurements overstated the
	perfomance wins, which turn out to be tiny. Not worth the
	complication. 
	
2007-11-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclCompCmds.c, generic/tclCompile.c, generic/tclCompile.h:
	* generic/tclExecute.c, generic/tclInt.decls, generic/tclIntDecls.h:
	* generic/tclRegexp.c, generic/tclRegexp.h: Add INST_REGEXP and fully
	* generic/tclStubInit.c, generic/tclUtil.c: compiled [regexp] for the
	* tests/regexpComp.test:     [Bug 1830166]  simple cases.  Also
	added TclReToGlob function to convert RE to glob patterns and use
	these in the possible cases.

2007-11-11  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclResult.c (ResetObjResult): clarify the logic.
	
	* generic/tclBasic.c:       Increased usage of macros to detect
	* generic/tclBinary.c:      and take advantage of objTypes. Added 
	* generic/tclClock.c:       macros TclGet(Int|Long)FromObj,
	* generic/tclCmdAH.c:       TclGetIntForIndexM and TclListObjLength, 
	* generic/tclCmdIL.c:       modified TclListObjGetElements.
	* generic/tclCmdMZ.c:
	* generic/tclCompCmds.c:    The TclGetInt* macros are only a shortcut
	* generic/tclCompExpr.c:    on platforms where 'long' is 'int'; it may